Função de marcar parcela como paga feita
